--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vite": "^5.0.11"
   },
   "dependencies": {
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "swiper": "^11.1.15"
   }
 }
